<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">WaterApp</string>
    <string name="action_settings">Settings</string>
    <!--main activity-->
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="main_password">password</string>
    <string name="main_username">username</string>
    <string name="main_button_text">Log In</string>

    <!--overview activity-->
    <string name='patient_a'>Patient A</string>
    <string name="patient_b">Patient B</string>
    <string name="patient_c">Patient C</string>
    <string name="new_patient_button">New patient</string>

    <!--patient activity-->
    <string name="title_activity_patient">PatientActivity</string>
    <string name="patient_name">Patient Name</string>
    <string name="button_main">Next</string>
    <string name="dehydration_level">Current Dehydration Level</string>
    <string name="room_number">Room number</string>
    <string name="gender">Gender</string>
    <string name="age">Age</string>
    <string name="birthday">Birthday</string>
    <string name="medication">Medication</string>
    <string name="medical_background">Medical Background</string>
    <string name="history">History</string>
    <string name="patient_medication">Afebril
    \n
    Solitium
    \n
    Corona
        \n
        Cocuouc
        \n
        encor eun
    </string>
    <string name="patient_dehydration_level">Medium</string>
    <string name="patient_room_number">654</string>
    <string name="patient_gender">F</string>
    <string name="patient_age">86</string>
    <string name="patient_history"> chelou
    </string>
    <string name="patient_background">Diabetes</string>


    <!--add activity-->


    <string name="title_activity_add">AddActivity</string>
    <string name="register">Register</string>
    <string name="lastname">Lastname</string>
    <string name="forename">Forename</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="medications">Medications</string>
    <string name="num1">Num1</string>
    <string name="num2">Num2</string>
    <string name="d1">d1</string>
    <string name="d2">d2</string>
    <string name="validate">Validate</string>
    <string name="cancel">Cancel</string>
    <string name="add_a_new_patient">Add a new patient</string>
    <string name="title_activity_overview">OverviewActivity</string>
    <string name="next">next</string>
    <string name="previous">previous</string>
    <string name="first_fragment_label">first_fragment_label</string>
    <string name="second_fragment_label">second_fragment_label</string>

    <!-- Feedback Activity -->

    <string name="title_activity_feedback">FeedbackActivity</string>
    <string name="comment_fb">Comment(s)</string>
    <string name="bug_fb">Bug(s)</string>
    <string name="question_fb">Question(s)</string>
    <string name="text_feedback">Type Your Message Here</string>
    <string name="feedback_form">Feedback Form</string>
    <string name="title_activity_modify">ModifyActivity</string>
    <string name="num3" />
    <string name="title_activity_setting">SettingActivity</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>



    <string-array name="PatientOrder">
        <item>By dehydration state</item>
        <item>By alphabetical order by names</item>
        <item>By number of room</item>

    </string-array>

    <string-array name="RefreshFrequency">
        <item>10 min</item>
        <item>20 min</item>
        <item>40 min </item>
        <item>1 hour </item>

    </string-array>


</resources>