<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textview_main"
        android:layout_width="match_parent"
        android:layout_height="101dp"
        android:layout_margin="8dp"
        android:layout_marginBottom="80dp"
        android:text="TextView" />

    <EditText
        android:id="@+id/editText_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|center_vertical"
        android:layout_marginTop="64dp"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/main_username"
        android:inputType="textPersonName"
        android:textColorHighlight="#3F51B5"
        android:textColorLink="#FFFFFF"
        android:backgroundTint="@color/colorPrimary"
        android:textStyle="bold"  />

    <EditText
        android:id="@+id/editText_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|fill_vertical"
        android:layout_marginBottom="32dp"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/main_password"
        android:inputType="textPassword"
        android:textColorHighlight="#3F51B5"
        android:textColorLink="#FFFFFF"
        android:backgroundTint="@color/colorPrimary"
        android:textStyle="bold" />

    <Button
        android:id="@+id/main_button_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:onClick="verifycredentials"
        android:text="@string/main_button_text"
        android:textStyle="bold"/>

</LinearLayout>