<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">


    <Button
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="29dp"
        android:text="@string/validate"
        android:textSize="14sp"
        android:textStyle="bold"
        android:onClick="launchOverviewActivity"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="3dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:focusable="true"
            android:focusableInTouchMode="true">

            <TextView
                android:id="@+id/feedback_intro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="24dp"
                android:text="Your opinion matters! We would love to hear your thoughts, concerns or problems so we can improve."
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/lastname_fb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginRight="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/feedback_intro"
                android:textColorLink="#FFFFFF"
                android:backgroundTint="@color/colorPrimary">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/lastname_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="0sp"
                    android:layout_marginLeft="0sp"
                    android:hint="@string/lastname"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/fb_forename"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lastname_text">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/fb_forename_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/forename"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/fb_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="24dp"
                android:text="What kind of feedback do you have?"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fb_forename" />

            <RadioGroup
                android:id="@+id/fb_choice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:layout_marginRight="24dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fb_type">


                <RadioButton
                    android:id="@+id/comment"
                    android:layout_width="118dp"
                    android:layout_height="36dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/comment_fb"
                    android:textStyle="bold"
                    app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

                <RadioButton
                    android:id="@+id/question"
                    android:layout_width="wrap_content"
                    android:layout_height="36dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/question_fb"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@+id/gender"
                    app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

                <RadioButton
                    android:id="@+id/bug"
                    android:layout_width="83dp"
                    android:layout_height="36dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/bug_fb"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@+id/gender"
                    app:layout_constraintTop_toBottomOf="@+id/radioGroup" />


            </RadioGroup>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/feedback"
                android:layout_width="379dp"
                android:layout_height="306dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fb_choice">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/feedback_text"
                    android:layout_width="match_parent"
                    android:layout_height="276dp"
                    android:hint="@string/text_feedback"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/register"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="23dp"
        android:layout_marginRight="23dp"
        android:layout_marginBottom="21dp"
        android:text="@string/cancel"
        android:textStyle="bold"
        android:onClick="launchOverviewActivity"/>

</RelativeLayout>
